--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^11.2.14",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "^11.2.14",
     "@angular/compiler": "^11.2.14",
     "@angular/core": "^11.2.14",
@@ -32,13 +32,13 @@
     "ngx-color-picker": "^7.5.0",
     "ngx-markdown": "^10.1.1",
     "ngx-order-pipe": "^2.0.4",
-    "ngx-youtube-player": "^9.1.0",
+    "ngx-youtube-player": "^12.0.1",
     "rxjs": "^6.5.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.18",
+    "@angular-devkit/build-angular": "0.1102.18",
     "@angular/cli": "^11.2.18",
     "@angular/compiler-cli": "^11.2.14",
     "@angular/language-service": "^11.2.14",
